--- a/pro/my/test.html
+++ b/pro/my/test.html
@@ -4,10 +4,62 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <!-- Optional: include a polyfill for ES6 Promises for IE11 -->
+    <link rel="shortcut icon" type="image/x-icon" href="../img/favicon.ico">
+    <!-- Google Fonts
+		============================================ -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700,900" rel="stylesheet">
+    <!-- Bootstrap CSS
+		============================================ -->
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <!-- font awesome CSS
+		============================================ -->
+    <link rel="stylesheet" href="../css/font-awesome.min.css">
+    <!-- owl.carousel CSS
+		============================================ -->
+    <link rel="stylesheet" href="../css/owl.carousel.css">
+    <link rel="stylesheet" href="../css/owl.theme.css">
+    <link rel="stylesheet" href="../css/owl.transitions.css">
+    <!-- meanmenu CSS
+		============================================ -->
+    <link rel="stylesheet" href="../css/meanmenu/meanmenu.min.css">
+    <!-- animate CSS
+		============================================ -->
+    <link rel="stylesheet" href="../css/animate.css">
+    <!-- normalize CSS
+		============================================ -->
+    <link rel="stylesheet" href="../css/normalize.css">
+    <!-- wave CSS
+        ============================================ -->
+    <link rel="stylesheet" href="../css/wave/waves.min.css">
+    <link rel="stylesheet" href="../css/wave/button.css">
+    <!-- mCustomScrollbar CSS
+		============================================ -->
+    <link rel="stylesheet" href="../css/scrollbar/jquery.mCustomScrollbar.min.css">
+    <!-- Notika icon CSS
+		============================================ -->
+    <link rel="stylesheet" href="../css/notika-custom-icon.css">
+    <!-- Data Table JS
+		============================================ -->
+    <link rel="stylesheet" href="../css/jquery.dataTables.min.css">
+    <!-- main CSS
+		============================================ -->
+    <link rel="stylesheet" href="../css/main.css">
+    <!-- style CSS
+		============================================ -->
+    <link rel="stylesheet" href="style.css">
+    <!-- responsive CSS
+		============================================ -->
+    <link rel="stylesheet" href="../css/responsive.css">
+    <!-- modernizr JS
+		============================================ -->
+    <script src="../js/vendor/modernizr-2.8.3.min.js"></script>
     <script src="../post.js"></script>
     <script src="../myAjax2.js"></script>
     <script type="text/javascript" src="jquery-3.5.1.min.js"> </script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
+    <script src="../js/data-table/jquery.dataTables.min.js"></script>
+    <script src="../js/data-table/data-table-act.js"></script>
     <!-- Optional: include a polyfill for ES6 Promises for IE11 -->
 
     <script>
@@ -30,113 +82,237 @@
               //      }
               //
               //   });
-              const Toast = Swal.mixin({
-                  toast: true,
-                  position: 'top-end',
-                  showConfirmButton: false,
-                  timer: 3000,
-                  timerProgressBar: true,
-                  didOpen: (toast) => {
-                      toast.addEventListener('mouseenter', Swal.stopTimer)
-                      toast.addEventListener('mouseleave', Swal.resumeTimer)
-                  }
-              });
-              function f() {
+              // const Toast = Swal.mixin({
+              //     toast: true,
+              //     position: 'top-end',
+              //     showConfirmButton: false,
+              //     timer: 3000,
+              //     timerProgressBar: true,
+              //     didOpen: (toast) => {
+              //         toast.addEventListener('mouseenter', Swal.stopTimer)
+              //         toast.addEventListener('mouseleave', Swal.resumeTimer)
+              //     }
+              // });
+              // function f() {
+              //     // var username=document.getElementById("regist_user").value;
+              //     // console.log("username"+username);
+              //     $.ajax({
+              //
+              //         type: "POST",
+              //
+              //         url: "http://175.24.51.64:8081/houses/insert",
+              //         //sellerId=1&address=1&size=1&price=1&hasBeenSold=1
+              //         // &currentHolderId=1&secondHand=1&roomsType=1&floor=1
+              //         // &age=1&decoration=1&houseType=1&property=1&face=1&remarks=1
+              //         data: "sellerId=" + 1 +"&address=" + 1+ "&size="+1+
+              //             "&price=" + 1+"&hasBeenSold="+1+"&currentHolderId=" + 1+"&secondHand=" + 1+"&roomsType=" + 1
+              //             +"&floor=" + 1+"&age=" + 1+"&decoration=" + 1+"&houseType=" + 1
+              //             +"&property=" + 1+"&face=" + 1+"&remarks=" + 1
+              //         ,
+              //
+              //         success: function(msg){
+              //             var data = JSON.parse(msg);
+              //             if(data['msg']==='failed'){
+              //                 Toast.fire({
+              //                     icon: 'error',
+              //                     title: 'Upload unsuccessfully'
+              //                 })
+              //             }
+              //             else{
+              //                 Toast.fire({
+              //                     icon: 'success',
+              //                     title: 'Upload successfully'
+              //                 });
+              //             }
+              //
+              //         },
+              //         error: function (msg) {
+              //             console.log("Data not Saved: " + msg);
+              //         }
+              //
+              //     });
 
-                  // var username=document.getElementById("regist_user").value;
-                  // console.log("username"+username);
-                  Toast.fire({
-                      icon: 'success',
-                      title: 'Signed in successfully'
-                  })
 
-                  // $.ajax({
-                  //
-                  //      type: "POST",
-                  //     // 175.24.51.64:8081/users/login?name=Pw&password=12
-                  //      url:"http://175.24.51.64:8081/users/login",
-                  //
-                  //      data: "name=Pw&password=1s",
-                  //
-                  //      success: function(msg){
-                  //
-                  //        var data = JSON.parse(msg)
-                  //        console.log( "Data Saved: " + data['msg'] );
-                  //        if(data['msg']==='failed'){
-                  //            Swal.fire({
-                  //                position: 'top-end',
-                  //                icon: 'error',
-                  //                title: 'Wrong uesrname or passord',
-                  //                showConfirmButton: false,
-                  //                timer: 1500
-                  //            })
-                  //        }
-                  //        else{
-                  //            Swal.fire({
-                  //                position: 'top-end',
-                  //                icon: 'success',
-                  //                title: 'Login success',
-                  //                showConfirmButton: false,
-                  //                timer: 1500
-                  //            })
-                  //        }
-                  //
-                  //      },
-                  //      error:function (msg) {
-                  //
-                  //       console.log( );
-                  //
-                  //      }
-                  //
-                  //   });
-              }
+                // var address = document.getElementById("regist_user").value;
+                //
+                // if(address!=""){
+                //     address="address="+address
+                // }
+              // window.onload=function(ev){
+              //     $.ajax({
+              //
+              //         type: "GET",
+              //         // 175.24.51.64:8081/users/login?name=Pw&password=12
+              //         url:"http://175.24.51.64:8081/houses/selectAll",
+              //
+              //         datatype : "json",
+              //         success: function(msg){
+              //             var data = JSON.parse(msg);
+              //             $.each(data['data'], function(i, item) {
+              //                 var houseType = item.houseType;
+              //                 var address = item.address;
+              //                 var age = item.age;
+              //                 var launchDate = item.launchDate;
+              //                 var price = item.price;
+              //                 var size = item.size;
+              //                 $("#ul").append(
+              //                     "<tr>"+
+              //                     "<td>"
+              //                     + houseType
+              //                     + "<td>"
+              //                     + address
+              //                     + "<td>"
+              //                     + age
+              //                     + "<td>"
+              //                     + launchDate
+              //                     + "<td>"
+              //                     + "$"+price
+              //                     + "<td>"
+              //                     + size
+              //                     + "<td>"
+              //                     + "</tr>"
+              //                 );
+              //             });
+              //
+              //
+              //         },
+              //         error:function (msg) {
+              //
+              //             console.log( );
+              //
+              //         }
+              //
+              //     });
+              // }
 
-              /*
-                  校验用户名:
-                  1.事件: onblur  失去焦点
-                  2.函数: checkUsername()
-                  3.函数去显示校验结果
-              */
-              function checkUsername(){
-                  //获取用户输入的内容
-                  var uValue = document.getElementById("username").value.trim();
-                  //对输入的内容进行校验
-                  //获得要显示结果的span
-                  var span = document.getElementById("span_username");
-                  if(uValue.length == 0){
-                      //显示校验结果
-                      span.innerHTML = "<font color='red' size='2'>×,不能为空</font>";
-                      return false;
-                  }else if(uValue.length < 4 && uValue.length > 0){
-                      //显示校验结果
-                      span.innerHTML = "<font color='red' size='2'>×,用户名太短</font>";
-                      return false;
-                  }else if(uValue.length > 18){
-                      //显示校验结果
-                      span.innerHTML = "<font color='red' size='2'>×,用户名太长</font>";
-                      return false;
-                  }else{
-                      if(!judeuser(span)){
-                          span.innerHTML = "<font color='green' size='2'>√,用户名可用</font>";
-                          name = $("#username").val().trim();
-                          return true
-                      }
-                      else{
-                          return false;
-                      }
-                  }
-              }
+
+        function f() {
+
+            Swal.fire({
+                title: 'Not enough points.',
+                width: 600,
+                padding: '3em',
+                showCancelButton: true,
+                background: '#fff url(/images/trees.png)',
+                backdrop: `
+    rgba(0,0,123,0.4)
+    url("img/cat.gif")
+    left top
+    no-repeat
+  `,confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Buy points!'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    Swal.fire({
+                        title: 'Buy!',
+                        imageUrl: "img/charge.jpg",
+                        showCancelButton: true,
+                        confirmButtonText: 'Ok!',
+                        cancelButtonText: 'Something Wrong!',
+                        reverseButtons: true
+                    }).then((result2) => {
+                        if (result2.isConfirmed) {
+                            Swal.fire(
+                                'Success!',
+                                'Check your balance.',
+                                'success'
+                            )
+                        } else if (
+                            result2.dismiss === Swal.DismissReason.cancel
+                        ) {
+                            Swal.fire(
+                                'Something Wrong!',
+                                'Your problem has been uploaded',
+                                'error'
+                            )
+                        }
+                    });
+                }
+        });
+        }
+
+
+
     </script>
 </head>
 <body>
 <div id="myDiv"><h2>使用 AJAX 修改该文本内容</h2></div>
+<button data-swal-template="#my-template">
+    Trigger modal
+</button>
 
+<button data-swal-toast-template="#my-template">
+    Trigger toast
+</button>
 <button type="button" id="but" onclick="f()">修改内容</button>
 <input type="text" class="form-control" id="regist_user" placeholder="Username">
-<div class="item">
-    <p class="p_row"><input placeholder="用户名" type="text" name="username" id="username" value="" required="required" onfocus="showTips('span_username','长度不能小于4且不能大于18')" onblur="checkUsername()" onkeyup="checkUsername()"/></p>
-    <span id="span_username"></span>
-</div>
+<table id="ul">
+    <thead>
+    <tr>
+        <th>Type</th>
+        <th>Address</th>
+        <th>Age</th>
+        <th>Start date</th>
+        <th>Price</th>
+        <th>Square metres</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>Beijing Lingxu</td>
+        <td>central</td>
+        <td>5 years</td>
+        <td>2021/01/25</td>
+        <td>$320,800</td>
+        <th>123</th>
+    </tr>
+</table>
+
+
+
+<script>
+
+
+    $(document).ready(function() {
+        $('#ul').DataTable({
+            ajax : {
+                url:"http://175.24.51.64:8081/houses/selectAll", //访问路径，返回Json数据
+
+                type : "GET"   //设置请求类型
+            },
+            columns : [ //数据渲染，固定格式,下面每一个对应表格一个td
+                {
+                    // "name" : "address", //后台返回json数据 这是名
+                    "data" : "address"  //这是值，一定要对应
+                },
+                {
+                    // "name" : "decoration",
+                    "data" : "decoration"
+                },
+                {
+                    // "name" : "floor",
+                    "data" : "floor"
+                },
+                {
+                    // "name" : "houseType",
+                    "data" : "houseType"
+                },
+                {
+                    // "name" : "price",
+                    "data" : "price"
+
+                },
+                {
+                    // "name" : "size",
+                    "data" : "size"
+                },]
+        });
+
+
+    });
+
+</script>
 </body>
 
 
