UI update & Ajax

--- a/pro/my/commend.html
+++ b/pro/my/commend.html
@@ -242,7 +242,7 @@
                         <ul class="notika-main-menu-dropdown">
                             <li><a href="contact.html">Contact</a>
                             </li>
-                            <li><a href="404.html">404 Page</a>
+                            <li><a href="ht/404.html">404 Page</a>
                             </li>
                         </ul>
                     </div>
