--- a/pro/my/upload_house.html
+++ b/pro/my/upload_house.html
@@ -139,7 +139,7 @@
                                         <li><a href="index-2.html">Dashboard Two</a></li>
                                         <li><a href="index-3.html">Dashboard Three</a></li>
                                         <li><a href="index-4.html">Dashboard Four</a></li>
-                                        <li><a href="analytics.html">Analytics</a></li>
+                                        <li><a href="ht/analytics.html">Analytics</a></li>
                                         <li><a href="widgets.html">Widgets</a></li>
                                     </ul>
                                 </li>
@@ -215,7 +215,7 @@
                                         </li>
                                         <li><a href="login-register.html">Login Register</a>
                                         </li>
-                                        <li><a href="404.html">404 Page</a>
+                                        <li><a href="ht/404.html">404 Page</a>
                                         </li>
                                     </ul>
                                 </li>
