--- a/pro/my/commend2.html
+++ b/pro/my/commend2.html
@@ -41,6 +41,7 @@
     <!-- responsive CSS
 		============================================ -->
     <link rel="stylesheet" href="../css/responsive.css">
+    <link rel="stylesheet" href="../css/housebox.css">
     <!-- modernizr JS
 		============================================ -->
     <script src="../js/vendor/modernizr-2.8.3.min.js"></script>
@@ -199,7 +200,7 @@
                             </li>
                             <li><a href="login-register.html">Login Register</a>
                             </li>
-                            <li><a href="404.html">404 Page</a>
+                            <li><a href="ht/404.html">404 Page</a>
                             </li>
                         </ul>
                     </div>
@@ -215,51 +216,181 @@
 <div class="notika-email-post-area">
     <div class="container">
         <h1>Search result:</h1>
-        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-            <div class="blog-inner-list notika-shadow mg-t-30 tb-res-ds-n dk-res-ds">
-                <div class="blog-img">
-                    <img src="../images/wimages/work-1.jpg"  />
-                </div>
-                <div class="blog-ctn">
-                    <div class="blog-hd-sw">
-                        <h2> Beijing Lingxiu</h2>
-                        <a class="bg-au" href="#">By Malinda on 9th June 2018</a>
+        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12" style="border:1px solid #000">
+
+        <div class="item">
+            <div class="property-wrap ftco-animate">
+                <a href="#" class="img" style="background-image: url(../images/wimages/work-2.jpg);">
+                    <div class="rent-sale">
+                        <span class="rent">Rent</span>
                     </div>
-                    <p>Convenient transportation, near the subway, surrounded by three parks, located in six universities, strong humanistic atmosphere.</p>
-                    <a class="vw-at" href="house-image.html">View Details...</a>
+                    <p class="price"><span class="old-price">800,000</span><span class="orig-price">$3,050<small> / mo</small></span></p>
+                </a>
+                <div class="text">
+                    <ul class="property_list">
+                        <li><span class="flaticon-bed"></span>3</li>
+                        <li><span class="flaticon-bathtub"></span>2</li>
+                        <li><span class="flaticon-floor-plan"></span>1,878 sqft</li>
+                    </ul>
+                    <h3><a href="#">The Blue Sky Home</a></h3>
+                    <span class="location">Oakland</span>
+                    <a href="#" class="d-flex align-items-center justify-content-center btn-custom">
+                        <span class="fa fa-link"></span>
+                    </a>
+                    <div class="list-team d-flex align-items-center mt-2 pt-2 border-top">
+                        <div class="d-flex align-items-center">
+                            <div class="img" style="background-image: url(../images/wimages/person_1.jpg);"></div>
+                            <h3 class="ml-2">John Dorf</h3>
+                        </div>
+                        <span class="text-right">2 weeks ago</span>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-            <div class="blog-inner-list notika-shadow mg-t-30 tb-res-ds-n dk-res-ds">
-                <div class="blog-img">
-                    <img src="../images/wimages/work-1.jpg"  />
-                </div>
-                <div class="blog-ctn">
-                    <div class="blog-hd-sw">
-                        <h2> Beijing Lingxiu</h2>
-                        <a class="bg-au" href="#">By Malinda on 9th June 2018</a>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12" style="border:1px solid #000">
+
+            <div class="item">
+                <div class="property-wrap ftco-animate">
+                    <a href="#" class="img" style="background-image: url(../images/wimages/work-2.jpg);">
+                        <div class="rent-sale">
+                            <span class="rent">Rent</span>
+                        </div>
+                        <p class="price"><span class="old-price">800,000</span><span class="orig-price">$3,050<small> / mo</small></span></p>
+                    </a>
+                    <div class="text">
+                        <ul class="property_list">
+                            <li><span class="flaticon-bed"></span>3</li>
+                            <li><span class="flaticon-bathtub"></span>2</li>
+                            <li><span class="flaticon-floor-plan"></span>1,878 sqft</li>
+                        </ul>
+                        <h3><a href="#">The Blue Sky Home</a></h3>
+                        <span class="location">Oakland</span>
+                        <a href="#" class="d-flex align-items-center justify-content-center btn-custom">
+                            <span class="fa fa-link"></span>
+                        </a>
+                        <div class="list-team d-flex align-items-center mt-2 pt-2 border-top">
+                            <div class="d-flex align-items-center">
+                                <div class="img" style="background-image: url(../images/wimages/person_1.jpg);"></div>
+                                <h3 class="ml-2">John Dorf</h3>
+                            </div>
+                            <span class="text-right">2 weeks ago</span>
+                        </div>
                     </div>
-                    <p>Convenient transportation, near the subway, surrounded by three parks, located in six universities, strong humanistic atmosphere.</p>
-                    <a class="vw-at" href="house-image.html">View Details...</a>
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-            <div class="blog-inner-list notika-shadow mg-t-30 tb-res-ds-n dk-res-ds">
-                <div class="blog-img">
-                    <img src="../images/wimages/work-1.jpg"  />
-                </div>
-                <div class="blog-ctn">
-                    <div class="blog-hd-sw">
-                        <h2> Beijing Lingxiu</h2>
-                        <a class="bg-au" href="#">By Malinda on 9th June 2018</a>
+        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12" style="border:1px solid #000">
+
+            <div class="item">
+                <div class="property-wrap ftco-animate">
+                    <a href="#" class="img" style="background-image: url(../images/wimages/work-2.jpg);">
+                        <div class="rent-sale">
+                            <span class="rent">Rent</span>
+                        </div>
+                        <p class="price"><span class="old-price">800,000</span><span class="orig-price">$3,050<small> / mo</small></span></p>
+                    </a>
+                    <div class="text">
+                        <ul class="property_list">
+                            <li><span class="flaticon-bed"></span>3</li>
+                            <li><span class="flaticon-bathtub"></span>2</li>
+                            <li><span class="flaticon-floor-plan"></span>1,878 sqft</li>
+                        </ul>
+                        <h3><a href="#">The Blue Sky Home</a></h3>
+                        <span class="location">Oakland</span>
+                        <a href="#" class="d-flex align-items-center justify-content-center btn-custom">
+                            <span class="fa fa-link"></span>
+                        </a>
+                        <div class="list-team d-flex align-items-center mt-2 pt-2 border-top">
+                            <div class="d-flex align-items-center">
+                                <div class="img" style="background-image: url(../images/wimages/person_1.jpg);"></div>
+                                <h3 class="ml-2">John Dorf</h3>
+                            </div>
+                            <span class="text-right">2 weeks ago</span>
+                        </div>
                     </div>
-                    <p>Convenient transportation, near the subway, surrounded by three parks, located in six universities, strong humanistic atmosphere.</p>
-                    <a class="vw-at" href="house-image.html">View Details...</a>
                 </div>
             </div>
         </div>
+        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12" style="border:1px solid #000">
+
+            <div class="item">
+                <div class="property-wrap ftco-animate">
+                    <a href="#" class="img" style="background-image: url(../images/wimages/work-2.jpg);">
+                        <div class="rent-sale">
+                            <span class="rent">Rent</span>
+                        </div>
+                        <p class="price"><span class="old-price">800,000</span><span class="orig-price">$3,050<small> / mo</small></span></p>
+                    </a>
+                    <div class="text">
+                        <ul class="property_list">
+                            <li><span class="flaticon-bed"></span>3</li>
+                            <li><span class="flaticon-bathtub"></span>2</li>
+                            <li><span class="flaticon-floor-plan"></span>1,878 sqft</li>
+                        </ul>
+                        <h3><a href="#">The Blue Sky Home</a></h3>
+                        <span class="location">Oakland</span>
+                        <a href="#" class="d-flex align-items-center justify-content-center btn-custom">
+                            <span class="fa fa-link"></span>
+                        </a>
+                        <div class="list-team d-flex align-items-center mt-2 pt-2 border-top">
+                            <div class="d-flex align-items-center">
+                                <div class="img" style="background-image: url(../images/wimages/person_1.jpg);"></div>
+                                <h3 class="ml-2">John Dorf</h3>
+                            </div>
+                            <span class="text-right">2 weeks ago</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+<!--        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">-->
+<!--            <div class="blog-inner-list notika-shadow mg-t-30 tb-res-ds-n dk-res-ds">-->
+<!--                <div class="blog-img">-->
+<!--                    <img src="../images/wimages/work-1.jpg"  />-->
+<!--                </div>-->
+<!--                <div class="blog-ctn">-->
+<!--                    <div class="blog-hd-sw">-->
+<!--                        <h2> Beijing Lingxiu</h2>-->
+<!--                        <a class="bg-au" href="#">By Malinda on 9th June 2018</a>-->
+<!--                    </div>-->
+<!--                    <p>Convenient transportation, near the subway, surrounded by three parks, located in six universities, strong humanistic atmosphere.</p>-->
+<!--                    <a class="vw-at" href="house-image.html">View Details...</a>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">-->
+<!--            <div class="blog-inner-list notika-shadow mg-t-30 tb-res-ds-n dk-res-ds">-->
+<!--                <div class="blog-img">-->
+<!--                    <img src="../images/wimages/work-1.jpg"  />-->
+<!--                </div>-->
+<!--                <div class="blog-ctn">-->
+<!--                    <div class="blog-hd-sw">-->
+<!--                        <h2> Beijing Lingxiu</h2>-->
+<!--                        <a class="bg-au" href="#">By Malinda on 9th June 2018</a>-->
+<!--                    </div>-->
+<!--                    <p>Convenient transportation, near the subway, surrounded by three parks, located in six universities, strong humanistic atmosphere.</p>-->
+<!--                    <a class="vw-at" href="house-image.html">View Details...</a>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">-->
+<!--            <div class="blog-inner-list notika-shadow mg-t-30 tb-res-ds-n dk-res-ds">-->
+<!--                <div class="blog-img">-->
+<!--                    <img src="../images/wimages/work-1.jpg"  />-->
+<!--                </div>-->
+<!--                <div class="blog-ctn">-->
+<!--                    <div class="blog-hd-sw">-->
+<!--                        <h2> Beijing Lingxiu</h2>-->
+<!--                        <a class="bg-au" href="#">By Malinda on 9th June 2018</a>-->
+<!--                    </div>-->
+<!--                    <p>Convenient transportation, near the subway, surrounded by three parks, located in six universities, strong humanistic atmosphere.</p>-->
+<!--                    <a class="vw-at" href="house-image.html">View Details...</a>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
         <!--                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">-->
         <!--                    <div class="blog-inner-list notika-shadow mg-t-30 tb-res-ds-n dk-res-ds">-->
         <!--                        <div class="blog-img">-->
